
syntax = "proto3";

package api.core.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service Subscription {
	rpc CreateSubscription (CreateSubscriptionRequest) returns (SubscriptionResponse) {
		option (google.api.http) = {
			post : "/subscriptions"
			body : "subscription"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Create subscription";
            operation_id: "CreateSubscription";
            tags: "Subscription";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
	rpc UpdateSubscription (UpdateSubscriptionRequest) returns (SubscriptionResponse) {
		option (google.api.http) = {
			put : "/subscriptions/{id}"
			body : "subscription"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Update subscription";
            operation_id: "UpdateSubscription";
            tags: "Subscription";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
	rpc DeleteSubscription (DeleteSubscriptionRequest) returns (DeleteSubscriptionResponse) {
		option (google.api.http) = {
			delete : "/subscriptions/{id}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Delete subscription";
            operation_id: "DeleteSubscription";
            tags: "Subscription";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
	rpc GetSubscription (GetSubscriptionRequest) returns (SubscriptionResponse) {
		option (google.api.http) = {
			get : "/subscriptions/{id}"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get subscription";
            operation_id: "GetSubscription";
            tags: "Subscription";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
	rpc ListSubscription (ListSubscriptionRequest) returns (ListSubscriptionResponse) {
		option (google.api.http) = {
			get : "/subscriptions"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List subscriptions";
            operation_id: "ListScription";
            tags: "Subscription";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
}

message SubscriptionObject {
    string mode = 1  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "suscription mode"}];
    string source = 2  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string filter = 3  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "filter"}];
    string target = 4  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "target id"}];
    string topic = 5  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "topic name"}];
    string pubsub_name = 6  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "pubsub name"}];

    string id = 11  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "suscription id"}];
    string owner = 12  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "suscription owner"}];
}



message SubscriptionResponse {
    string id = 1  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string source = 3  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 4  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
    SubscriptionObject subscription = 5  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription object"}];
}

message CreateSubscriptionRequest {
    string id = 1  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string source = 3  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 4  [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
    SubscriptionObject subscription = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription object"}];
}


message UpdateSubscriptionRequest {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string source = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
    SubscriptionObject subscription = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription object"}];
}


message DeleteSubscriptionRequest {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string source = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
}
message DeleteSubscriptionResponse {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string status = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "status"}];
}

message GetSubscriptionRequest {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription id"}];
    string source = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
}

message ListSubscriptionRequest {
    string source = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
}

message ListSubscriptionResponse {
    int32 count = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "count of the subscriptions"}];
    repeated SubscriptionResponse items = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "subscription items"}];
}



